# minidlna

./: .gitignore  Changelog.txt  How to port minidlna to Windows-1.0.19.txt  INSTALL  LICENCE  Makefile  Makefile.am  NEWS  Note-for-MiniDLNA-cygwin.txt  README  README.md  SConstruct  TODO  albumart.c  albumart.h  codelength.h  commonrdr.h  config.h  config.h.in  configure.ac  daemonize.c  daemonize.h  genconfig.sh  getifaddr.c  getifaddr.h  icons.c  image_utils.c  image_utils.h  inotify.c  inotify.h  limits.h  log.c  log.h  metadata.c  metadata.h  minidlna.c  minidlna.conf  minidlnapath.h  minidlnatypes.h  minissdp.c  (+40 more)
linux/: minidlna.init.d.script  miniupnpd.init.d.script
po/: LINGUAS  da.po  de.po  es.po  fr.po  hu.po  it.po  ja.po  minidlna.pot  nb.po  nl.po  ru.po  sl.po  sv.po
src/: SConscript  albumart.c  codelength.h  daemonize.c  daemonize.h  getifaddr.c  image_utils.c  image_utils.h  inotify.c  log.c  metadata.c  metadata.h  minidlna.c  minidlnapath.h  minidlnatypes.h  minissdp.c  naturalsort.c  naturalsort.h  options.c  options.h  playlist.c  scanner.c  sql.c  testupnpdescgen.c  tivo_beacon.c  tivo_beacon.h  tivo_commands.c  tivo_commands.h  tivo_utils.c  tivo_utils.h  upnpdescgen.c  upnpdescgen.h  upnpevents.c  upnpevents.h  upnpglobalvars.c  upnpglobalvars.h  upnphttp.c  upnphttp.h  upnpreplyparse.h  upnpsoap.c  (+2 more)
tagutils/: misc.c  misc.h  tagutils-aac.c  tagutils-aac.h  tagutils-asf.c  tagutils-asf.h  tagutils-flc.c  tagutils-flc.h  tagutils-misc.c  tagutils-mp3.c  tagutils-mp3.h  tagutils-ogg.c  tagutils-ogg.h  tagutils-pcm.c  tagutils-pcm.h  tagutils.c  (+6 more)
(+6 files in other folders)
